--- a/MYBANK-NKHONDE/package.json
+++ b/MYBANK-NKHONDE/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.0-beta3",
+    "chart.js": "^4.4.7",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
   },
